src/expr/src/scalar/snapshots/mz_expr__scalar__func__encode.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc()]\nfn encode(bytes: &ByteStr, format: &str) -> Result<String, EvalError> {\n    let format = encoding::lookup_format(format)?;\n    Ok(format.encode(&*bytes))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Encode;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for Encode {
    type Input1 = &'a ByteStr;
    type Input2 = &'a str;
    type Output = Result<String, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        encode(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for Encode {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(encode))
    }
}
fn encode(bytes: &ByteStr, format: &str) -> Result<String, EvalError> {
    let format = encoding::lookup_format(format)?;
    Ok(format.encode(&*bytes))
}
