src/expr/src/scalar/snapshots/mz_expr__scalar__func__jsonb_delete_string.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    output_type_expr = \"ScalarType::Jsonb.nullable(true)\",\n    is_infix_op = true,\n    sqlname = \"-\",\n    propagates_nulls = true,\n    introduces_nulls = true\n)]\nfn jsonb_delete_string<'a>(\n    a: Datum<'a>,\n    b: Datum<'a>,\n    temp_storage: &'a RowArena,\n) -> Datum<'a> {\n    match a {\n        Datum::List(list) => {\n            let elems = list.iter().filter(|e| b != *e);\n            temp_storage.make_datum(|packer| packer.push_list(elems))\n        }\n        Datum::Map(dict) => {\n            let k = b.unwrap_str();\n            let pairs = dict.iter().filter(|(k2, _v)| k != *k2);\n            temp_storage.make_datum(|packer| packer.push_dict(pairs))\n        }\n        _ => Datum::Null,\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct JsonbDeleteString;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for JsonbDeleteString {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Datum<'a>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            match a {
                Datum::List(list) => {
                    let elems = list.iter().filter(|e| b != *e);
                    temp_storage.make_datum(|packer| packer.push_list(elems))
                }
                Datum::Map(dict) => {
                    let k = b.unwrap_str();
                    let pairs = dict.iter().filter(|(k2, _v)| k != *k2);
                    temp_storage.make_datum(|packer| packer.push_dict(pairs))
                }
                _ => Datum::Null,
            }
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = ScalarType::Jsonb.nullable(true);
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        true
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for JsonbDeleteString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
