src/expr/src/scalar/snapshots/mz_expr__scalar__func__like_escape.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(output_type = \"String\", propagates_nulls = true, introduces_nulls = false)]\nfn like_escape<'a>(\n    a: Datum<'a>,\n    b: Datum<'a>,\n    temp_storage: &'a RowArena,\n) -> Result<Datum<'a>, EvalError> {\n    let pattern = a.unwrap_str();\n    let escape = like_pattern::EscapeBehavior::from_str(b.unwrap_str())?;\n    let normalized = like_pattern::normalize_pattern(pattern, escape)?;\n    Ok(Datum::String(temp_storage.push_string(normalized)))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct LikeEscape;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for LikeEscape {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Result<Datum<'a>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            let pattern = a.unwrap_str();
            let escape = like_pattern::EscapeBehavior::from_str(b.unwrap_str())?;
            let normalized = like_pattern::normalize_pattern(pattern, escape)?;
            Ok(Datum::String(temp_storage.push_string(normalized)))
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = <String>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        false
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for LikeEscape {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(like_escape))
    }
}
